cm4all-beng-proxy (0.7.44) unstable; urgency=low

  * http-client: check response header length

 --

cm4all-beng-proxy (0.7.43) unstable; urgency=low

  * http-cache: fixed NULL pointer dereference when storing empty response
    body on the heap

 -- Max Kellermann <mk@cm4all.com>  Tue, 01 Jun 2010 18:52:45 +0200

cm4all-beng-proxy (0.7.42) unstable; urgency=low

  * fork: check "direct" flag again after buffer flush
  * pool: pool_unref_denotify() remembers the code location
  * sink-{buffer,gstring}: don't invoke callback in abort()
  * async: added another debug flag to verify correctness

 -- Max Kellermann <mk@cm4all.com>  Mon, 31 May 2010 21:15:58 +0200

cm4all-beng-proxy (0.7.41) unstable; urgency=low

  * http-cache: initialize response status and headers on empty body

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 16:27:25 +0200

cm4all-beng-proxy (0.7.40) unstable; urgency=low

  * http-cache: fixed NULL pointer dereference when storing empty response
    body in memcached

 -- Max Kellermann <mk@cm4all.com>  Tue, 25 May 2010 15:04:44 +0200

cm4all-beng-proxy (0.7.39) unstable; urgency=low

  * memcached-stock: close value on connect failure
  * http: implement remaining status codes
  * http-cache: allow caching empty response body
  * http-cache: cache status codes 203, 206, 300, 301, 410
  * http-cache: don't cache authorized resources

 -- Max Kellermann <mk@cm4all.com>  Fri, 21 May 2010 17:37:29 +0200

cm4all-beng-proxy (0.7.38) unstable; urgency=low

  * http-server: send HTTP/1.1 declaration with "100 Continue"
  * connection: initialize "site_name", fixes crash bug
  * translation: added packet SECURE_COOKIE

 -- Max Kellermann <mk@cm4all.com>  Thu, 20 May 2010 15:40:34 +0200

cm4all-beng-proxy (0.7.37) unstable; urgency=low

  * *-client: implement a socket leak detector
  * handler: initialize response header without translation server

 -- Max Kellermann <mk@cm4all.com>  Tue, 18 May 2010 12:05:11 +0200
