@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.44) unstable; urgency=low
 
   * http-client: check response header length
+  * http-server: check request header length
 
  --
 
